# OpenGLProjectTemplate

./: CMakeLists.txt  README.md
src/: main.cpp  shader_loader.cpp
